# canopy

./: .gitignore  Cargo.toml  GETTING_STARTED.md  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rust-toolchain.toml
.claude/skills/canopy/: SKILL.md
.claude/skills/canopy/reference/: api.md  architecture.md  authoring.md  hardware.md  styling.md
.claude/skills/cpp-doctor-style-guide/: SKILL.md
.github/workflows/: canopy-cpp.yml  ci.yml  stylo.yml
bindings/canopy_cpp/: .clang-tidy  .cpp-doctor.yaml  CMakeLists.txt  cpp-doctor.toml
bindings/canopy_cpp/examples/counter_card/: main.cpp
bindings/canopy_cpp/src/: build_context.cpp  host.cpp  reactive.cpp
bindings/canopy_cpp/tests/: display_list_test.cpp  dsl_test.cpp  encoder_test.cpp  event_loop_test.cpp  freestanding_smoke.cpp  inplace_function_test.cpp  on_frt_test.cpp  parity_test.cpp  reactive_test.cpp  roundtrip_test.cpp
crates/canopy-a11y/: Cargo.toml
crates/canopy-a11y/examples/: dump_tree.rs
crates/canopy-a11y/src/: lib.rs
crates/canopy-abi/: Cargo.toml
crates/canopy-abi/include/: canopy.h  canopy_displaylist.h  canopy_protocol.h
crates/canopy-abi/src/: displaylist.rs  lib.rs
crates/canopy-abi/tests/: displaylist_header.rs  protocol_header.rs
crates/canopy-anim/: Cargo.toml
crates/canopy-anim/src/: easing.rs  lib.rs
crates/canopy-cli/: Cargo.toml
crates/canopy-cli/src/: build.rs  main.rs  scaffold.rs  usage.rs
crates/canopy-core/: Cargo.toml
crates/canopy-core/src/: lib.rs
crates/canopy-dom/: Cargo.toml
crates/canopy-dom/src/: lib.rs
crates/canopy-host/: Cargo.toml
crates/canopy-host/src/: lib.rs
crates/canopy-hotreload/: Cargo.toml
crates/canopy-hotreload/src/: lib.rs
crates/canopy-hotreload/tests/: hotreload.rs
crates/canopy-input/: Cargo.toml
crates/canopy-input/src/: lib.rs
crates/canopy-layout-taffy/: Cargo.toml
crates/canopy-layout-taffy/src/: lib.rs
crates/canopy-paint/: Cargo.toml
crates/canopy-paint/src/: lib.rs
crates/canopy-plugin-panel/: Cargo.toml
crates/canopy-plugin-panel/src/: lib.rs
crates/canopy-protocol/: Cargo.toml
crates/canopy-protocol/src/: lib.rs
crates/canopy-render-soft/: Cargo.toml
crates/canopy-render-soft/src/: lib.rs
crates/canopy-render-soft/tests/: render_counter.rs
crates/canopy-render-text/: Cargo.toml
crates/canopy-render-text/src/: lib.rs
crates/canopy-render-vello/: Cargo.toml
crates/canopy-render-vello/src/: glyph.wgsl  lib.rs  quad.wgsl
crates/canopy-rsx/: Cargo.toml
crates/canopy-rsx/src/: ast.rs  codegen.rs  lib.rs
crates/canopy-rsx/tests/: lowering.rs
crates/canopy-signals/: Cargo.toml
crates/canopy-signals/src/: lib.rs
crates/canopy-style-css/: Cargo.toml  FEATURES.md
crates/canopy-style-css/src/: lib.rs
crates/canopy-style-stylo/: Cargo.toml
crates/canopy-style-stylo/src/: display_list.rs  html.rs  lib.rs  paint.rs  text_measure.rs
crates/canopy-style-stylo/tests/: browser_oracle.rs  cascade.rs  layout.rs  layout_oracle.rs
crates/canopy-style-stylo/tests/common/: mod.rs
crates/canopy-text-baked/: Cargo.toml
crates/canopy-text-baked/src/: lib.rs
crates/canopy-text-parley/: Cargo.toml
crates/canopy-text-parley/src/: lib.rs
crates/canopy-traits/: Cargo.toml
crates/canopy-traits/src/: lib.rs
crates/canopy-transport-component/: Cargo.toml  README.md  build.rs
crates/canopy-transport-component/src/: lib.rs
crates/canopy-transport-component/tests/: component.rs
crates/canopy-transport-component/tests/fixtures/: wasi-adversary.wat
crates/canopy-transport-native/: Cargo.toml
crates/canopy-transport-native/src/: lib.rs
crates/canopy-transport-wasmtime/: Cargo.toml  build.rs
crates/canopy-transport-wasmtime/examples/: render_plugin.rs
crates/canopy-transport-wasmtime/src/: lib.rs
crates/canopy-transport-wasmtime/tests/: plugin.rs
crates/canopy-ui/: Cargo.toml
crates/canopy-ui/src/: lib.rs
crates/canopy-view/: Cargo.toml
crates/canopy-view/src/: lib.rs
crates/canopy-view/tests/: reactive_loop.rs
crates/canopy-wpt/: Cargo.toml
crates/canopy-wpt/expectations/: css-flexbox.txt  css-grid.txt
crates/canopy-wpt/src/: expectations.rs  main.rs
crates/canopy-wpt/src/test_runners/: attr_test.rs  mod.rs  ref_test.rs
docs/: ARCHITECTURE.md
examples/: README.md
examples/canopy-component-guest/: Cargo.toml
examples/canopy-component-guest/src/: lib.rs
examples/canopy-demo/: Cargo.toml  build.rs
examples/canopy-demo/src/: lib.rs
examples/canopy-landing/: Cargo.toml  styles.css
examples/canopy-landing-gpu/: Cargo.toml
examples/canopy-landing-gpu/src/: lib.rs
examples/canopy-landing/src/: lib.rs
examples/canopy-plugin-counter/: Cargo.toml
examples/canopy-plugin-counter/src/: lib.rs
examples/canopy-welcome/: Cargo.toml  styles.css
examples/canopy-welcome/src/: lib.rs
examples/common/landing-ui/: Cargo.toml  styles.css
examples/full/capable-tier/: Cargo.toml
examples/full/component-guest/: Cargo.toml
examples/full/demo/: Cargo.toml  build.rs
examples/full/landing/: Cargo.toml
examples/full/plugin-counter/: Cargo.toml
examples/full/stylo/: Cargo.toml  styles.css
examples/full/stylo-browser/: Cargo.toml  page.html
examples/lite/embedded/: Cargo.toml
examples/lite/landing/: Cargo.toml
examples/lite/welcome/: Cargo.toml
runtime/canopy_rt/: .clang-format  .clang-tidy  .cpp-doctor.yaml  CMakeLists.txt  cpp-doctor.toml
runtime/canopy_rt/cmake/: cpp-doctor.cmake
runtime/canopy_rt/src/: backend_debug_tracking.cpp  backend_host_posix.cpp  new_delete.cpp  platform.cpp
runtime/canopy_rt/tests/: new_delete_route_test.cpp  platform_host_test.cpp  rt_surface_smoke.cpp
runtime/frt/: .clang-tidy  .cpp-doctor.yaml  .gitignore  CMakeLists.txt  cpp-doctor.toml
runtime/frt/docs/: m5-nm-audit.md
runtime/frt/src/: backend_debug_tracking.cpp  backend_host_posix.cpp  new_delete.cpp  platform.cpp
runtime/frt/tests/: new_delete_route_test.cpp  platform_host_test.cpp  rt_surface_smoke.cpp  xstd_platform_test.cpp  xstd_surface_smoke.cpp
runtime/frt/tools/: nm_audit.sh
wit/: README.md  canopy.wit
(+37 files in other folders)
