[workspace]
resolver = "2"
members = [
    "crates/canopy-protocol",
    "crates/canopy-traits",
    "crates/canopy-core",
    "crates/canopy-signals",
    "crates/canopy-view",
    "crates/canopy-dom",
    "crates/canopy-paint",
    "crates/canopy-render-soft",
    "crates/canopy-text-baked",
    "crates/canopy-transport-native",
    "crates/canopy-host",
]

# The four crates above are the guest-side core: they MUST stay `no_std` + `alloc`
# so the same code runs from a desktop host down to a bare-metal target. Host-side
# backends (renderer, style, text, platform, transports) will live in their own
# `std` leaf crates and are added later — the std seam is a crate boundary, never a
# `#[cfg]` inside a shared crate.

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iivillian/canopy"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
lto = true
