[workspace]
resolver = "2"
# The examples pull winit/softbuffer/wgpu (and the wasm guests target a different
# triple); keep them out of the no_std core workspace. Each is its own standalone
# `[workspace]`; build it from its own directory. Organized by tier:
#   examples/lite/* — constrained tier: CPU software raster, baked/parley text
#   examples/full/* — capable tier: GPU (wgpu/vello), sandboxed wasm plugins
#   examples/common/* — shared support libs (e.g. the landing UI both tiers render)
exclude = [
    # Full-tier Stylo cascade: pulls Stylo's large std-only tree; standalone, own lockfile.
    "crates/canopy-style-stylo",
    # WPT conformance runner: depends on the excluded Stylo crate; standalone, own lockfile.
    "crates/canopy-wpt",
    "examples/common/landing-ui",
    "examples/lite/welcome",
    "examples/lite/landing",
    "examples/lite/embedded",
    "examples/full/landing",
    "examples/full/demo",
    "examples/full/stylo",
    "examples/full/stylo-browser",
    "examples/full/capable-tier",
    "examples/full/plugin-counter",
    "examples/full/component-guest",
]
members = [
    "crates/canopy-protocol",
    "crates/canopy-traits",
    "crates/canopy-core",
    "crates/canopy-signals",
    "crates/canopy-view",
    "crates/canopy-dom",
    "crates/canopy-paint",
    "crates/canopy-render-soft",
    "crates/canopy-text-baked",
    "crates/canopy-transport-native",
    "crates/canopy-host",
    "crates/canopy-layout-taffy",
    "crates/canopy-style-css",
    "crates/canopy-transport-wasmtime",
    "crates/canopy-transport-component",
    "crates/canopy-render-vello",
    "crates/canopy-text-parley",
    "crates/canopy-render-text",
    "crates/canopy-input",
    "crates/canopy-plugin-panel",
    "crates/canopy-a11y",
    "crates/canopy-cli",
    "crates/canopy-abi",
    "crates/canopy-rsx",
    "crates/canopy-hotreload",
    "crates/canopy-ui",
    "crates/canopy-anim",
]

# The four crates above are the guest-side core: they MUST stay `no_std` + `alloc`
# so the same code runs from a desktop host down to a bare-metal target. Host-side
# backends (renderer, style, text, platform, transports) will live in their own
# `std` leaf crates and are added later — the std seam is a crate boundary, never a
# `#[cfg]` inside a shared crate.

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iivillian/canopy"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
lto = true
