[package]
name = "canopy-abi"
description = "Canopy's stable C ABI over the host op-stream: an opaque host handle plus extern \"C\" functions to create it, feed it validated op-batch bytes, read back facts, and free it. The cross-language embedding seam — the one crate allowed unsafe (it is the FFI boundary)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# Build three artifacts from the same source:
#   * `rlib`      — so Rust tests (and Rust embedders) can link it and exercise the
#                   extern fns through the safe path.
#   * `staticlib` — a `.a` a C/C++ host links directly.
#   * `cdylib`    — a `.so`/`.dylib`/`.dll` a runtime loader (or Python ctypes,
#                   Node N-API, a Swift/Kotlin bridge, …) can `dlopen`.
[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
# The host side. `Dom` is the retained tree + capability-validating OpSink; we wrap
# it behind the C handle and feed it untrusted op bytes exactly like the wasmtime
# transport does.
canopy-dom = { path = "../canopy-dom" }
canopy-traits = { path = "../canopy-traits" }
# Encode the host->guest DispatchEvent batch the event drain returns (OpEncoder), and
# lay out + hit-test the retained tree to turn a pointer into the node under it. The
# lite (inline-style) layout; the host-side-cascade geometry path is a follow-up.
canopy-protocol = { path = "../canopy-protocol" }
canopy-layout-taffy = { path = "../canopy-layout-taffy" }
# Lite CPU rasterizer: turns the laid-out DisplayList into an RGBA8 framebuffer for the
# headless render seam (canopy_host_render_rgba). The same no_std path the device uses.
canopy-render-soft = { path = "../canopy-render-soft" }

[dev-dependencies]
# The guest-side op-builder, used by the tests to produce real op batches (create an
# element + a text child, append under ROOT, take_batch) and drive them through the
# C entry points.
canopy-core = { path = "../canopy-core" }
# The reference host's well-known id registries, so the protocol_header parity test can
# machine-check include/canopy_protocol.h against the live constants (ElementTag/EventKind
# in canopy-view, PropId in canopy-paint) and catch any header drift.
canopy-view = { path = "../canopy-view" }
canopy-paint = { path = "../canopy-paint" }

[lints]
workspace = true
