[package]
name = "canopy-anim"
description = "Canopy's host-driven tween/clock engine: animate a value over time into a signal a bound effect reads (no_std + alloc, no ambient clock)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
canopy-signals = { path = "../canopy-signals" }

[lints]
workspace = true
