[package]
name = "canopy-input"
description = "Canopy input model: pure text-editing logic plus a focus model (which node receives keys). no_std + alloc; the host translates platform key events into these primitives."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
canopy-protocol = { path = "../canopy-protocol" }

[lints]
workspace = true
