[package]
name = "canopy-paint"
description = "Canopy scene builder: walks the host Dom into a renderer-agnostic DisplayList (trivial stack layout for M1; Taffy/Stylo slot in behind the same traits). no_std + alloc."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
canopy-protocol = { path = "../canopy-protocol" }
canopy-traits = { path = "../canopy-traits" }
canopy-dom = { path = "../canopy-dom" }

[dev-dependencies]
canopy-core = { path = "../canopy-core" }

[lints]
workspace = true
