[package]
name = "canopy-rsx"
description = "Canopy's first-party Rust authoring macro: a JSX-like `rsx!` that lowers an HTML-style tree to `canopy-view::App` builder calls (host build tooling, std)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# A procedural macro: this crate compiles to a compiler plugin, not a library you
# link against. It runs on the *host* at build time (std, not no_std) and emits
# tokens that reference `::canopy_view`; the consumer crate is what actually depends
# on canopy-view at runtime.
proc-macro = true

[dependencies]
# The standard, permissively-licensed proc-macro stack. `syn` parses the macro input
# into a typed AST, `quote` builds the output token stream, and `proc-macro2` is the
# span-carrying token type both speak so the macro is unit-testable off the compiler.
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
# The integration tests build real trees with the macro and assert the emitted op
# batch matches the same tree built by hand. They therefore need the runtime surface
# the macro lowers to (`App` + the well-known element ids), the signal runtime for the
# reactive closures, and a host `Dom` to apply and introspect the resulting op-stream.
canopy-view = { path = "../canopy-view" }
canopy-signals = { path = "../canopy-signals" }
canopy-protocol = { path = "../canopy-protocol" }
canopy-dom = { path = "../canopy-dom" }
# `Dom::apply` is provided by the `OpSink` trait, which the end-to-end test imports to
# replay an rsx!-built batch into a real host tree.
canopy-traits = { path = "../canopy-traits" }

[lints]
workspace = true
