[package]
name = "canopy-style-css"
description = "Canopy CSS-lite: parses a class-rule stylesheet (`.name { prop: value }`) into resolved (PropId, value) declarations that feed the existing inline-style path. A documented subset — no cascade, no selectors beyond a single class. no_std + alloc, zero external deps."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
canopy-protocol = { path = "../canopy-protocol" }
canopy-paint = { path = "../canopy-paint" }
canopy-view = { path = "../canopy-view" }
# The retained tree the lite StyleEngine reads node classes from, and the flat style
# PAL (ComputedStyle + the StyleEngine trait) it produces. Both are no_std and build on
# thumbv7em, so the constrained tier stays embeddable.
canopy-dom = { path = "../canopy-dom" }
canopy-traits = { path = "../canopy-traits" }

[dev-dependencies]
canopy-core = { path = "../canopy-core" }

[lints]
workspace = true
